--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1394,17 +1394,64 @@ a.text-black:hover, a.text-black:focus { color: black !important; }
 
 #share-holder .share-content img { width: 50px; }
 
+#loader-holder { position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; z-index: 99999; background-color: rgba(228, 241, 249, 0.5); }
+
+#loader-holder .lds-roller { display: inline-block; position: relative; width: 80px; height: 80px; left: 50%; top: 50%; transform: translate(-50%, -50%); }
+
+#loader-holder .lds-roller div { animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite; transform-origin: 40px 40px; }
+
+#loader-holder .lds-roller div:after { content: " "; display: block; position: absolute; width: 7px; height: 7px; border-radius: 50%; background: #dc3545; margin: -4px 0 0 -4px; }
+
+#loader-holder .lds-roller div:nth-child(1) { animation-delay: -0.036s; }
+
+#loader-holder .lds-roller div:nth-child(1):after { top: 63px; left: 63px; }
+
+#loader-holder .lds-roller div:nth-child(2) { animation-delay: -0.072s; }
+
+#loader-holder .lds-roller div:nth-child(2):after { top: 68px; left: 56px; }
+
+#loader-holder .lds-roller div:nth-child(3) { animation-delay: -0.108s; }
+
+#loader-holder .lds-roller div:nth-child(3):after { top: 71px; left: 48px; }
+
+#loader-holder .lds-roller div:nth-child(4) { animation-delay: -0.144s; }
+
+#loader-holder .lds-roller div:nth-child(4):after { top: 72px; left: 40px; }
+
+#loader-holder .lds-roller div:nth-child(5) { animation-delay: -0.18s; }
+
+#loader-holder .lds-roller div:nth-child(5):after { top: 71px; left: 32px; }
+
+#loader-holder .lds-roller div:nth-child(6) { animation-delay: -0.216s; }
+
+#loader-holder .lds-roller div:nth-child(6):after { top: 68px; left: 24px; }
+
+#loader-holder .lds-roller div:nth-child(7) { animation-delay: -0.252s; }
+
+#loader-holder .lds-roller div:nth-child(7):after { top: 63px; left: 17px; }
+
+#loader-holder .lds-roller div:nth-child(8) { animation-delay: -0.288s; }
+
+#loader-holder .lds-roller div:nth-child(8):after { top: 56px; left: 12px; }
+
+@keyframes lds-roller { 0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); } }
+
 .header { position: fixed; z-index: 1000; top: 0px; left: 0px; width: 100%; min-height: 64px; padding: 10px 0px; }
 
 .logo a { font-size: 2em; }
 
 .menu { list-style-type: none; display: inline-block; }
 
-.menu li { float: left; }
+.menu li { float: left; margin-right: 10px; }
 
-.menu li button, .menu li a { color: #FFFFFF; display: block; padding: 8px 15px; }
+.menu li:last-child { margin-right: 0px; }
 
-.menu li.active a { color: red; }
+.menu li button, .menu li a { text-align: center; color: #FFFFFF; display: block; padding: 8px 20px; min-width: 120px; border: 2px solid #023152; text-decoration: none; opacity: .8; }
+
+.menu li button:hover, .menu li a:hover { opacity: 1; }
+
+.menu li.active a { opacity: 1; color: #E4F1F9; border-color: #E4F1F9; }
 
 .mobile-menu { height: 100%; will-change: transform; transform: translate(100%, 0px); transition: transform 300ms ease-in-out; }
 
