--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1368,7 +1368,9 @@ a.text-black:hover, a.text-black:focus { color: black !important; }
 
 .preview img { max-width: 100%; max-height: 300px; }
 
-.content-card { display: block; color: black; }
+.content-card { display: block; color: black; will-change: transform; transition: transform 200ms ease-out; z-index: 1; position: relative; }
+
+.content-card:hover { text-decoration: none; box-shadow: 3px 1px 5px 1px rgba(0, 0, 0, 0.3) !important; transform: scale(1.03); }
 
 .published { bottom: 0px; left: 0px; width: 100%; background-color: rgba(2, 49, 82, 0.7); }
 
