--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1362,15 +1362,15 @@ a.text-black:hover, a.text-black:focus { color: black !important; }
 
 .unlist.inline li a { padding: 5px 10px; }
 
-.card-bg-image { background-size: cover; width: 100%; height: 100%; min-height: 225px; background-position: center center; }
+.card-bg-image { background-size: cover; width: 100%; height: 100%; min-height: 275px; background-position: center center; }
 
-.card-content-min-height { min-height: 225px; }
+.card-content-min-height { min-height: 275px; }
 
 .preview img { max-width: 100%; max-height: 300px; }
 
-.content-card { display: block; color: black; border: 3px solid #E4F1F9 !important; }
+.content-card { display: block; color: black; will-change: box-shadow, background-color; transition: box-shadow 200ms ease-in-out,  background-color 200ms ease-in-out; }
 
-.content-card:focus, .content-card:hover { outline: 0; text-decoration: none; border: 3px solid #dc3545 !important; color: #034f84 !important; }
+.content-card:focus, .content-card:hover { outline: 0; text-decoration: none; background-color: #E4F1F9 !important; color: #034f84 !important; box-shadow: 0.2rem 0.4rem 0.3rem rgba(0, 0, 0, 0.175) !important; }
 
 .published { bottom: 0px; left: 0px; width: 100%; background-color: rgba(2, 49, 82, 0.7); }
 
